--- a/AndradeEexamen3/AndradeEexamen3.csproj
+++ b/AndradeEexamen3/AndradeEexamen3.csproj
@@ -71,6 +71,9 @@
 	  <MauiXaml Update="Views\LogsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\RegistroPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 
 </Project>
